plugins/python/src/main/java/io/paddle/plugin/python/dependencies/parser/antlr/DependencySpecificationParser.java
package io.paddle.plugin.python.dependencies.parser.antlr;

// Generated from DependencySpecification.g4 by ANTLR 4.8

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DependencySpecificationParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            WSP = 18, LETTER = 19, DIGIT = 20, ENV_VAR = 21, VERSION_CMP = 22, IDENT_END = 23,
            IDENT = 24, PYTHON_STR_C = 25, DQUOTE = 26, SQUOTE = 27, PYTHON_STR = 28;
    public static final int
            RULE_version = 0, RULE_versionCmp = 1, RULE_versionOne = 2, RULE_versionMany = 3,
            RULE_versionspec = 4, RULE_markerOp = 5, RULE_markerVar = 6, RULE_markerExpr = 7,
            RULE_markerAnd = 8, RULE_markerOr = 9, RULE_marker = 10, RULE_quotedMarker = 11,
            RULE_name = 12, RULE_extrasList = 13, RULE_extras = 14, RULE_nameReq = 15,
            RULE_specification = 16;

    private static String[] makeRuleNames() {
        return new String[]{
                "version", "versionCmp", "versionOne", "versionMany", "versionspec",
                "markerOp", "markerVar", "markerExpr", "markerAnd", "markerOr", "marker",
                "quotedMarker", "name", "extrasList", "extras", "nameReq", "specification"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'-'", "'_'", "'.'", "'*'", "'+'", "'!'", "','", "'('", "')'",
                "'in'", "'not'", "'and'", "'or'", "';'", "'['", "']'", "'\n'", null,
                null, null, null, null, null, null, null, "'\"'", "'''"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, "WSP", "LETTER", "DIGIT", "ENV_VAR",
                "VERSION_CMP", "IDENT_END", "IDENT", "PYTHON_STR_C", "DQUOTE", "SQUOTE",
                "PYTHON_STR"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "DependencySpecification.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public DependencySpecificationParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class VersionContext extends ParserRuleContext {
        public List<TerminalNode> WSP() {
            return getTokens(DependencySpecificationParser.WSP);
        }

        public TerminalNode WSP(int i) {
            return getToken(DependencySpecificationParser.WSP, i);
        }

        public List<TerminalNode> IDENT() {
            return getTokens(DependencySpecificationParser.IDENT);
        }

        public TerminalNode IDENT(int i) {
            return getToken(DependencySpecificationParser.IDENT, i);
        }

        public List<TerminalNode> LETTER() {
            return getTokens(DependencySpecificationParser.LETTER);
        }

        public TerminalNode LETTER(int i) {
            return getToken(DependencySpecificationParser.LETTER, i);
        }

        public List<TerminalNode> DIGIT() {
            return getTokens(DependencySpecificationParser.DIGIT);
        }

        public TerminalNode DIGIT(int i) {
            return getToken(DependencySpecificationParser.DIGIT, i);
        }

        public VersionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_version;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).enterVersion(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).exitVersion(this);
        }
    }

    public final VersionContext version() throws RecognitionException {
        VersionContext _localctx = new VersionContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_version);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(37);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == WSP) {
                    {
                        {
                            setState(34);
                            match(WSP);
                        }
                    }
                    setState(39);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(41);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(40);
                            _la = _input.LA(1);
                            if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << LETTER) | (1L << DIGIT) | (1L << IDENT))) != 0))) {
                                _errHandler.recoverInline(this);
                            } else {
                                if (_input.LA(1) == Token.EOF) matchedEOF = true;
                                _errHandler.reportMatch(this);
                                consume();
                            }
                        }
                    }
                    setState(43);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << LETTER) | (1L << DIGIT) | (1L << IDENT))) != 0));
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VersionCmpContext extends ParserRuleContext {
        public TerminalNode VERSION_CMP() {
            return getToken(DependencySpecificationParser.VERSION_CMP, 0);
        }

        public VersionCmpContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_versionCmp;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).enterVersionCmp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).exitVersionCmp(this);
        }
    }

    public final VersionCmpContext versionCmp() throws RecognitionException {
        VersionCmpContext _localctx = new VersionCmpContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_versionCmp);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(45);
                match(VERSION_CMP);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VersionOneContext extends ParserRuleContext {
        public VersionCmpContext versionCmp() {
            return getRuleContext(VersionCmpContext.class, 0);
        }

        public VersionContext version() {
            return getRuleContext(VersionContext.class, 0);
        }

        public List<TerminalNode> WSP() {
            return getTokens(DependencySpecificationParser.WSP);
        }

        public TerminalNode WSP(int i) {
            return getToken(DependencySpecificationParser.WSP, i);
        }

        public VersionOneContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_versionOne;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).enterVersionOne(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).exitVersionOne(this);
        }
    }

    public final VersionOneContext versionOne() throws RecognitionException {
        VersionOneContext _localctx = new VersionOneContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_versionOne);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(47);
                versionCmp();
                setState(48);
                version();
                setState(52);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(49);
                                match(WSP);
                            }
                        }
                    }
                    setState(54);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VersionManyContext extends ParserRuleContext {
        public List<VersionOneContext> versionOne() {
            return getRuleContexts(VersionOneContext.class);
        }

        public VersionOneContext versionOne(int i) {
            return getRuleContext(VersionOneContext.class, i);
        }

        public List<TerminalNode> WSP() {
            return getTokens(DependencySpecificationParser.WSP);
        }

        public TerminalNode WSP(int i) {
            return getToken(DependencySpecificationParser.WSP, i);
        }

        public VersionManyContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_versionMany;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).enterVersionMany(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).exitVersionMany(this);
        }
    }

    public final VersionManyContext versionMany() throws RecognitionException {
        VersionManyContext _localctx = new VersionManyContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_versionMany);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(55);
                versionOne();
                setState(66);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(59);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                                while (_la == WSP) {
                                    {
                                        {
                                            setState(56);
                                            match(WSP);
                                        }
                                    }
                                    setState(61);
                                    _errHandler.sync(this);
                                    _la = _input.LA(1);
                                }
                                setState(62);
                                match(T__6);
                                setState(63);
                                versionOne();
                            }
                        }
                    }
                    setState(68);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VersionspecContext extends ParserRuleContext {
        public VersionManyContext versionMany() {
            return getRuleContext(VersionManyContext.class, 0);
        }

        public VersionspecContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_versionspec;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).enterVersionspec(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).exitVersionspec(this);
        }
    }

    public final VersionspecContext versionspec() throws RecognitionException {
        VersionspecContext _localctx = new VersionspecContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_versionspec);
        try {
            setState(74);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case T__7:
                    enterOuterAlt(_localctx, 1);
                {
                    {
                        setState(69);
                        match(T__7);
                        setState(70);
                        versionMany();
                        setState(71);
                        match(T__8);
                    }
                }
                break;
                case VERSION_CMP:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(73);
                    versionMany();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class MarkerOpContext extends ParserRuleContext {
        public TerminalNode VERSION_CMP() {
            return getToken(DependencySpecificationParser.VERSION_CMP, 0);
        }

        public List<TerminalNode> WSP() {
            return getTokens(DependencySpecificationParser.WSP);
        }

        public TerminalNode WSP(int i) {
            return getToken(DependencySpecificationParser.WSP, i);
        }

        public MarkerOpContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_markerOp;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).enterMarkerOp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).exitMarkerOp(this);
        }
    }

    public final MarkerOpContext markerOp() throws RecognitionException {
        MarkerOpContext _localctx = new MarkerOpContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_markerOp);
        int _la;
        try {
            int _alt;
            setState(105);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 11, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(76);
                    match(VERSION_CMP);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    {
                        setState(78);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(77);
                                    match(WSP);
                                }
                            }
                            setState(80);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while (_la == WSP);
                        setState(82);
                        match(T__9);
                        setState(84);
                        _errHandler.sync(this);
                        _alt = 1;
                        do {
                            switch (_alt) {
                                case 1: {
                                    {
                                        setState(83);
                                        match(WSP);
                                    }
                                }
                                break;
                                default:
                                    throw new NoViableAltException(this);
                            }
                            setState(86);
                            _errHandler.sync(this);
                            _alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
                        } while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
                    }
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    {
                        setState(89);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(88);
                                    match(WSP);
                                }
                            }
                            setState(91);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while (_la == WSP);
                        setState(93);
                        match(T__10);
                        setState(95);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(94);
                                    match(WSP);
                                }
                            }
                            setState(97);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while (_la == WSP);
                        setState(99);
                        match(T__9);
                        setState(101);
                        _errHandler.sync(this);
                        _alt = 1;
                        do {
                            switch (_alt) {
                                case 1: {
                                    {
                                        setState(100);
                                        match(WSP);
                                    }
                                }
                                break;
                                default:
                                    throw new NoViableAltException(this);
                            }
                            setState(103);
                            _errHandler.sync(this);
                            _alt = getInterpreter().adaptivePredict(_input, 10, _ctx);
                        } while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
                    }
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class MarkerVarContext extends ParserRuleContext {
        public TerminalNode ENV_VAR() {
            return getToken(DependencySpecificationParser.ENV_VAR, 0);
        }

        public TerminalNode PYTHON_STR() {
            return getToken(DependencySpecificationParser.PYTHON_STR, 0);
        }

        public List<TerminalNode> WSP() {
            return getTokens(DependencySpecificationParser.WSP);
        }

        public TerminalNode WSP(int i) {
            return getToken(DependencySpecificationParser.WSP, i);
        }

        public MarkerVarContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_markerVar;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).enterMarkerVar(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).exitMarkerVar(this);
        }
    }

    public final MarkerVarContext markerVar() throws RecognitionException {
        MarkerVarContext _localctx = new MarkerVarContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_markerVar);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(110);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == WSP) {
                    {
                        {
                            setState(107);
                            match(WSP);
                        }
                    }
                    setState(112);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(113);
                _la = _input.LA(1);
                if (!(_la == ENV_VAR || _la == PYTHON_STR)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class MarkerExprContext extends ParserRuleContext {
        public List<MarkerVarContext> markerVar() {
            return getRuleContexts(MarkerVarContext.class);
        }

        public MarkerVarContext markerVar(int i) {
            return getRuleContext(MarkerVarContext.class, i);
        }

        public MarkerOpContext markerOp() {
            return getRuleContext(MarkerOpContext.class, 0);
        }

        public MarkerContext marker() {
            return getRuleContext(MarkerContext.class, 0);
        }

        public List<TerminalNode> WSP() {
            return getTokens(DependencySpecificationParser.WSP);
        }

        public TerminalNode WSP(int i) {
            return getToken(DependencySpecificationParser.WSP, i);
        }

        public MarkerExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_markerExpr;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).enterMarkerExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).exitMarkerExpr(this);
        }
    }

    public final MarkerExprContext markerExpr() throws RecognitionException {
        MarkerExprContext _localctx = new MarkerExprContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_markerExpr);
        int _la;
        try {
            setState(135);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 15, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(115);
                    markerVar();
                    setState(116);
                    markerOp();
                    setState(117);
                    markerVar();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(122);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == WSP) {
                        {
                            {
                                setState(119);
                                match(WSP);
                            }
                        }
                        setState(124);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(125);
                    match(T__7);
                    setState(126);
                    marker();
                    setState(130);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == WSP) {
                        {
                            {
                                setState(127);
                                match(WSP);
                            }
                        }
                        setState(132);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(133);
                    match(T__8);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class MarkerAndContext extends ParserRuleContext {
        public List<MarkerExprContext> markerExpr() {
            return getRuleContexts(MarkerExprContext.class);
        }

        public MarkerExprContext markerExpr(int i) {
            return getRuleContext(MarkerExprContext.class, i);
        }

        public List<TerminalNode> WSP() {
            return getTokens(DependencySpecificationParser.WSP);
        }

        public TerminalNode WSP(int i) {
            return getToken(DependencySpecificationParser.WSP, i);
        }

        public MarkerAndContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_markerAnd;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).enterMarkerAnd(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).exitMarkerAnd(this);
        }
    }

    public final MarkerAndContext markerAnd() throws RecognitionException {
        MarkerAndContext _localctx = new MarkerAndContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_markerAnd);
        int _la;
        try {
            setState(148);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 17, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(137);
                    markerExpr();
                    setState(141);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == WSP) {
                        {
                            {
                                setState(138);
                                match(WSP);
                            }
                        }
                        setState(143);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(144);
                    match(T__11);
                    setState(145);
                    markerExpr();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(147);
                    markerExpr();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class MarkerOrContext extends ParserRuleContext {
        public List<MarkerAndContext> markerAnd() {
            return getRuleContexts(MarkerAndContext.class);
        }

        public MarkerAndContext markerAnd(int i) {
            return getRuleContext(MarkerAndContext.class, i);
        }

        public List<TerminalNode> WSP() {
            return getTokens(DependencySpecificationParser.WSP);
        }

        public TerminalNode WSP(int i) {
            return getToken(DependencySpecificationParser.WSP, i);
        }

        public MarkerOrContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_markerOr;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).enterMarkerOr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof DependencySpecificationListener) ((DependencySpecificationListener) listener).exitMarkerOr(this);
        }
    }
